img max width to prevent clipping on small screens

--- a/errorpages/styles.css
+++ b/errorpages/styles.css
@@ -100,7 +100,8 @@ h1 {
 
 img {
     margin: 2rem 0;
-    max-height: 50vh;
+	max-height: 50vh;
+	max-width: 85vw;
 }
 
 p {
